# vision

./: .gitignore  README.md  capture-detect.py  capture-segment.py  capture.py  detection.py  detectron2_export.py  detectron2_train.py  detectron2export.py  detectron2test.py  detectron2train.py  network1.py  sam_export.py  samtest.py
detectron2/: train.py  train_simple.py  validate.py
detectron2/demo1/: imagedrawer.cpp  main.cpp
detectron2_example/: test.py  train.py  validate.py
detectron2_example/demo0/: main.cpp
detectron2_example/demo1/: imagedrawer.h
detectron2demo0/: Makefile  detectron2test.cpp  main.cpp
detectron2demo1/: CMakeLists.txt  Main.qml
draw_eval/: main.py
mask-rcnn/: main.py
maskrcnn/: backbone.py  dataset.py  eval_results.txt  fpn.py  loss.py  loss_class_box.py  loss_class_spec_box.py  loss_classifier.py  loss_mask.py  loss_rpn_bbox.py  loss_rpn_objectness.py  main.py  model.py  roi_align.py  rpn.py  rpn_head.py  temp.py  test_anchor.py  test_mask.py  utils.py  validate.py
maskrcnn/roi/: __init__.py  bbox_head.py  classifier_head.py  mask_head.py  roi_align.py
maskrcnn/roi_heads/: __init__.py  classifier_head.py
maskrcnn/test/: gen_coco_tfrecords.sh  iou.py  mask.py
yolo/: capture-segment.py  capture_detect.py  capture_segment.py  coco.yaml  detect.py  open_image.py  pcb_component.py  segment.py  train.py
yolo/example/: coco-seg.yaml  coco.yaml  datasets_utils.py
yolo/pcb_component/: data.yaml  detect.py
